--- a/platformio.ini
+++ b/platformio.ini
@@ -1,33 +1,40 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp32cam]
 platform = espressif32
 board = esp32cam
 framework = arduino
 monitor_speed = 115200
-
 lib_deps = 
-    bodmer/TFT_eSPI@^2.5.43
-    bblanchon/ArduinoJson@^7.2.0
-    ESP Async WebServer
-
+	bodmer/TFT_eSPI@^2.5.43
+	bblanchon/ArduinoJson@^7.2.0
 build_flags = 
-    -DUSER_SETUP_LOADED=1
-    -DST7789_DRIVER=1
-    -DTFT_WIDTH=135
-    -DTFT_HEIGHT=240
-    -DTFT_MOSI=19
-    -DTFT_SCLK=18
-    -DTFT_CS=12
-    -DTFT_DC=13
-    -DTFT_RST=14
-    -DTFT_BL=32
-    -DLOAD_GLCD=1
-    -DLOAD_FONT2=1
-    -DLOAD_FONT4=1
-    -DLOAD_FONT6=1
-    -DLOAD_FONT7=1
-    -DLOAD_FONT8=1
-    -DLOAD_GFXFF=1
-    -DSMOOTH_FONT=1
-    -DSPI_FREQUENCY=40000000
-
+	-DUSER_SETUP_LOADED=1
+	-DST7789_DRIVER=1
+	-DTFT_WIDTH=135
+	-DTFT_HEIGHT=240
+	-DTFT_MOSI=19
+	-DTFT_SCLK=18
+	-DTFT_CS=12
+	-DTFT_DC=13
+	-DTFT_RST=14
+	-DTFT_BL=32
+	-DLOAD_GLCD=1
+	-DLOAD_FONT2=1
+	-DLOAD_FONT4=1
+	-DLOAD_FONT6=1
+	-DLOAD_FONT7=1
+	-DLOAD_FONT8=1
+	-DLOAD_GFXFF=1
+	-DSMOOTH_FONT=1
+	-DSPI_FREQUENCY=40000000
 board_build.filesystem = littlefs
+extra_scripts = extra.py
