hardcode pir pin
- change config structure accoordingly
- Set up display correctly

--- a/data/config.example.json
+++ b/data/config.example.json
@@ -11,8 +11,5 @@
   "device": {
     "name": "Veranda"
   },
-  "pir": {
-    "pin": 33,
-    "detectionCooldownMs": 30000
-  }
+  "pirDetectionCooldownMs": 30000
 }
