--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ board = esp32cam
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	bodmer/TFT_eSPI@^2.5.43
-	bblanchon/ArduinoJson@^7.2.0
+	bblanchon/ArduinoJson@^7.4.2
+    thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.6.1
 board_build.filesystem = littlefs
 extra_scripts = extra.py
