--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,7 @@ lib_deps =
     thingpulse/ESP8266 and ESP32 OLED driver for SSD1306 displays@^4.6.1
 board_build.filesystem = littlefs
 extra_scripts = extra.py
+build_flags = 
+    -DCONFIG_LWIP_MAX_SOCKETS=16
+    -DCONFIG_TCPIP_TASK_STACK_SIZE=4096
+    -DCORE_DEBUG_LEVEL=5
